package model;

public enum Tipo {
    DEBITO,
    CREDITO
}
